--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,109 @@
-body{
+body {
   background-color: blue;
-  margin: auto;
-  margin: auto;
+  margin: 0;
+  width: 100%;
 }
 
-h1{
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10px;
+}
+
+.header-logo img {
+  width: 100%;
+  max-width: 180px;
+  height: auto;
+}
+
+h1 {
   color: rgb(12, 90, 62);
 }
 
 #back-image {
-  background-image:url(../image/back-blue.jpg);
+  background-image: url(../image/back-blue.jpg);
   background-repeat: repeat;
   background-size: auto;
   padding: 10px;
-
 }
 
 #link-box {
   width: 300px;
-  padding: 5px 0px 5px 5px;
+  padding: 5px;
   margin: 10px;
   background-color: rgb(14, 131, 220);
   border-radius: 10px;
+}
+
+/* toggleメニューの設定 */
+.menu-overlay {
+  position: fixed;
+  top: 70px;                 /* ヘッダー分ずらす */
+  left: 50%;
+  transform: translateX(-50%);
+  width: calc(100% - 24px);
+  max-width: 420px;
+  height: calc(100vh - 100px);
+
+  background: #0f3f8c;
+  border-radius: 30px;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.4s ease;
+  z-index: 3;
+}
+
+.menu-overlay.open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.menu-panel {
+  margin: 120px auto 0;
+  width: 85%;
+  background: #9ea2a6;
+  border-radius: 30px;
+  padding: 30px 24px;
+}
+
+.menu-panel a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.menu-toggle {
+  background: #fff;
+  color: #0f3f8c;
+  border-radius: 999px;
+  letter-spacing: 0.05em;
+  position: fixed;
+  top: 1vw;
+  right: 1vw;
+  width: 110px;
+    height: 30px;
+    text-align: center;
+}
+
+/* スマホレイアウトの設定 */
+@media screen and (max-width: 600px) {
+  header {
+    flex-direction: column;   /* ロゴとMENUを縦並びに */
+    align-items: flex-start;  /* 左寄せ */
   }
+
+  .menu {
+    position: static;         /* 絶対配置を解除 */
+    width: 100%;
+  }
+
+  .menu li {
+    padding: 15px;
+    border-bottom: 1px solid #ccc;
+  }
+
+  .menu-toggle {
+    font-size: 20px;
+  }
+}
