--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 body {
-  background-color: blue;
+  background-image: url("../image/haikei-01.jpeg");
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position:center ;
+  min-height: 100vh;
   margin: 0;
-  width: 100%;
+
 }
 
 header {
@@ -9,6 +13,11 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px 10px;
+  z-index: 10;
+}
+
+.header-logo{
+  z-index: 5;
 }
 
 .header-logo img {
@@ -39,15 +48,14 @@ h1 {
 /* toggleメニューの設定 */
 .menu-overlay {
   position: fixed;
-  top: 70px;                 /* ヘッダー分ずらす */
+  top: 0px;                 /* ヘッダー分ずらす */
   left: 50%;
   transform: translateX(-50%);
-  width: calc(100% - 24px);
-  max-width: 420px;
+  width: 100%;
   height: calc(100vh - 100px);
 
-  background: #0f3f8c;
-  border-radius: 30px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 0px 0px 30px 30px;
 
   opacity: 0;
   pointer-events: none;
@@ -62,7 +70,7 @@ h1 {
 
 .menu-panel {
   margin: 120px auto 0;
-  width: 85%;
+  width: 80%;
   background: #9ea2a6;
   border-radius: 30px;
   padding: 30px 24px;
@@ -82,8 +90,11 @@ h1 {
   top: 1vw;
   right: 1vw;
   width: 110px;
-    height: 30px;
-    text-align: center;
+  height: 30px;
+  text-align: center;
+  padding-top: 4px;
+  font-weight: bold;
+  z-index: 5;
 }
 
 /* スマホレイアウトの設定 */
@@ -103,7 +114,5 @@ h1 {
     border-bottom: 1px solid #ccc;
   }
 
-  .menu-toggle {
-    font-size: 20px;
-  }
+
 }
