--- a/css/style.css
+++ b/css/style.css
@@ -52,10 +52,10 @@ h1 {
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  height: calc(100vh - 100px);
+  height: 100%;
 
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 0px 0px 30px 30px;
+  background-color: rgba(141, 123, 211, 0.3);
+
 
   opacity: 0;
   pointer-events: none;
