--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,7 @@ h1 {
   .menu-toggle {
     font-family: "Noto Sans JP", Arial, sans-serif;
     font-size: 18px;
-    padding: 2px;
+    padding-top: 2px;
     font-weight: bold;
   }
 
