--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,9 @@ h1 {
   border-radius: 999px;
   letter-spacing: 0.05em;
   position: fixed;
-  top: 1vw;
   right: 1vw;
   width: 110px;
-  height: 30px;
+  padding-bottom: 4px;
   text-align: center;
   font-weight: bold;
   z-index: 5;
@@ -111,8 +110,8 @@ h1 {
   .menu-toggle {
     font-family: "Noto Sans JP", Arial, sans-serif;
     font-size: 18px;
-    padding: 1px 12px; 
     width: 110px;
+    padding-bottom: 4px;
     text-align: center;
     font-weight: 700;
     box-sizing: border-box;
