--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   background-size:cover;
   background-repeat: no-repeat;
   background-position:center ;
-  min-height: 100vh;
+  min-height: 100dvh;
   margin: 0;
 
 }
