--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
 body {
-  background-image: url("../image/haikei-01.jpeg");
-  background-size:cover;
-  background-repeat: no-repeat;
-  background-position:center ;
-  min-height: 110dvh;
   margin: 0;
+
 
 }
 
@@ -29,6 +25,41 @@ header {
 h1 {
   color: rgb(12, 90, 62);
 }
+
+#top{
+  background-image: url("../image/haikei-01.jpeg");
+  background-size:cover;
+  background-repeat: no-repeat;
+  background-position:center ;
+  min-height: 100vh;
+  margin: 0;
+  z-index: 6;
+    &::after{
+    content:"";
+    width:120%;
+    height:100px;
+    position:absolute;
+    bottom:0;
+    left:50%;
+    background:#fff;
+    transform:translate(-50%,50%);
+    border-radius:100%;
+  }
+}
+
+
+
+
+#profile{
+  margin-top: -60px;
+  padding-top: 60px;
+  background-image: url("../image/haikei-05.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+}
+
 
 #back-image {
   background-image: url(../image/back-blue.jpg);
@@ -122,6 +153,7 @@ h1 {
 
   .menu li {
     padding: 15px;
+    list-style: none;
     border-bottom: 1px solid #ccc;
   }
 
